found and fixed the horizontal scroll

--- a/css/index.css
+++ b/css/index.css
@@ -373,31 +373,47 @@ footer .box{
         padding: 0;
         font-size: 2rem;
         width:100%;
+        align-items: flex-start;
     }
     footer .footer-column{
+        padding: 0;
+        margin: 0;
         flex-direction:column;
-        
+        align-items: flex-start;
     }
     
     .footer-left {
        flex-direction:column;
         width:100%;
         justify-content:center;
+        
+        margin:0;
+        padding:0;
       }
       .footer-right {
         width:100%;
         flex-direction:column;
         justify-content:center;
+        margin:0;
+        padding:0;
       }
       footer nav{
         flex-direction:column;
         justify-content:center;
         align-items:center;
+        margin:0;
+        padding:0;
+
+      }
+      footer nav a{
+          padding:0;
+          margin:0%;
+          text-align:center;
       }
     footer .signupbtn{
         
         padding:0%;
-        width:100%;
+        width:90%;
         margin: 0 auto;
     }
     footer h3{
@@ -405,17 +421,23 @@ footer .box{
         text-align:center;
         width:100%;
         margin-top:0;
+        padding:0;
     }
     
     footer .box{
         padding:0%;
-        width:100%;
+        width:90%;
         margin: 0 auto;
         
     }
     .copyright{
        text-align:center;
        padding-right:0;
+       padding-bottom:5%;
+    }
+    .spacer-sm {
+        
+        height: 5vh;
        
     }
 }
